tests/baselines/reference/parserAutomaticSemicolonInsertion1.errors.txt
==== tests/cases/compiler/parserAutomaticSemicolonInsertion1.ts (2 errors) ====
    interface I {
        (): void;
    }
     
    var i: I;
    var o: Object;
    o = i;
    i = o;
    ~
!!! parserAutomaticSemicolonInsertion1.ts(8,1): error TS2012: Type 'Object' is not assignable to type 'I':
!!! 	Type 'I' requires a call signature, but type 'Object' lacks one.
     
    var a: {
        (): void
    }
    o = a;
    a = o;
    ~
!!! parserAutomaticSemicolonInsertion1.ts(14,1): error TS2012: Type 'Object' is not assignable to type '() => void':
!!! 	Type '() => void' requires a call signature, but type 'Object' lacks one.
    